// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Snapshots > matches checked state snapshot 1`] = `
<button
  aria-checked="true"
  class="checkbox"
  data-state="checked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="checkbox__indicator"
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check checkbox__check-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox > Snapshots > matches default snapshot 1`] = `
<button
  aria-checked="false"
  class="checkbox"
  data-state="unchecked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-checked="false"
  class="checkbox"
  data-disabled=""
  data-state="unchecked"
  data-testid="checkbox"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches error state snapshot 1`] = `
<div
  class="checkbox-wrapper"
>
  <div
    class="checkbox-wrapper__content"
  >
    <button
      aria-checked="false"
      class="checkbox checkbox--error"
      data-state="unchecked"
      data-testid="checkbox"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="checkbox-wrapper__text"
    >
      <p
        class="checkbox-wrapper__error-text"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox > Snapshots > matches loading state snapshot 1`] = `
<button
  aria-checked="false"
  class="checkbox checkbox--loading"
  data-disabled=""
  data-state="unchecked"
  data-testid="checkbox"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches required state snapshot 1`] = `
<button
  aria-checked="false"
  class="checkbox"
  data-state="unchecked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
/>
`;
